--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-<header class="container-fluid text-center bg-black text-white py-4">
-    
-    {% include logo.html %}
+<header class="text-center bg-black text-white py-4">
+    <div class="container">
+        {% include logo.html %}
 
-    <h1 class="my-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
+        <h1 class="my-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
 
-    <p class="mb-0"><strong>Unofficial</strong> calendars for Gedling Borough Council refuse/garden bin collections published in HTML, iCalendar and JSON formats.</p>
+        <p class="mb-0"><strong>Unofficial</strong> calendars for Gedling Borough Council refuse/garden bin collections published in HTML, iCalendar and JSON formats.</p>
+    </div>
 </header>
