--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
-<footer class="border-top border-bottom bg-light py-4 text-center container-fluid mt-3">
-    <p class="mb-0">The calendar data provided is unofficial and not officially published by Gedling Borough Council. You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about the repository</a> and publication of these calendars.</p>
+<footer class="border-top border-bottom bg-light py-4 mt-3">
+    <div class="container">
+        <p class="mb-0"><span class="fw-bold">Disclaimer:</span> The calendar data and information provided on this website is unofficial and not officially published by Gedling Borough Council.</p>
+        <p class="mb-0">You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about this website</a> and the process behind the publication of bin collection data in other formats.</p>
+    </div>
 </footer>
