--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -9,6 +9,7 @@
 {% endif %}
 
 {% assign jsonData = site.data.icaljs[dataKey].collectionDates %}
+{% assign jsonUrl = "/json/" | append: dataKey | append: ".json" | absolute_url %}
 {% assign icalUrl = "/ical/" | append: dataKey | append: ".ics" | absolute_url %}
 
 <div>
@@ -26,7 +27,7 @@
         <div class="d-grid d-md-flex gap-2 mt-2">
             <button type="button" class="btn btn-secondary" onclick="copyToClipboard()">Copy iCal URL</button>
             <a href="{{ icalUrl }}" class="btn btn-gedling-red" download>Download calendar</a>
-            <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
+            <a href="{{ jsonUrl }}" class="btn btn-success">View as JSON</a>
         </div>
     </div>
 
