--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -25,16 +25,17 @@
         <p id="ical-url-copy-result" class="d-none mt-1 mb-0"></p>
 
         <div class="d-grid d-md-flex gap-2 mt-2">
-            <button type="button" class="btn btn-secondary" onclick="copyToClipboard()">Copy iCal URL</button>
+            <button id="copy-ical-url-btn" type="button" class="btn btn-secondary">Copy iCal URL</button>
             <a href="{{ icalUrl }}" class="btn btn-gedling-red" download>Download calendar</a>
             <a href="{{ jsonUrl }}" class="btn btn-success">View as JSON</a>
         </div>
     </div>
 
     <script>
-        function copyToClipboard() {
-            var icalUrl = document.getElementById("ical-url");
-            var icalCopyMessage = document.getElementById("ical-url-copy-result");
+        const copyIcalBtn = document.querySelector('#copy-ical-url-btn');
+        copyIcalBtn.addEventListener('click', function() {
+            let icalUrl = document.getElementById("ical-url");
+            let icalCopyMessage = document.getElementById("ical-url-copy-result");
 
             icalUrl.select();
             icalUrl.setSelectionRange(0, icalUrl.value.length);
@@ -53,7 +54,8 @@
                 icalCopyMessage.classList.add('d-none');
                 icalCopyMessage.classList.remove('text-success', 'text-danger');
             }, 3000);
-        }
+
+        });
     </script>
 </div>
 
@@ -61,13 +63,14 @@
 
 {% if isGardenCollection %}
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-        {% for month in months %}
-            <div class="col">
-                <h2 class="h3" id="{{ month.name | slugify }}">{{ month.name }}</h2>
 
+        {% for month in months %}
+            {% assign lastCollectionIndex = month.items.size | minus: 1 %}
+            <div class="col" data-collection-first="{{ month.items[0].collectionDate | date: '%F'  }}" data-collection-last="{{ month.items[lastCollectionIndex].collectionDate | date: '%F' }}">
+                <h2 class="h3" id="{{ month.name | slugify }}">{{ month.name }}</h2>
                 <ol class="list-unstyled">
                     {% for item in month.items %}
-                        <li {%- if item.isChangedCollection %} class="text-danger fw-bold"{% endif %}>
+                        <li data-bin-collection-date="{{ item.collectionDate | date: '%F' }}" {%- if item.isChangedCollection %} class="text-danger fw-bold"{% endif %}>
                             {{ item.collectionDate | date: "%A %-d %B" }}
                             {% if item.isChangedCollection %}
                                 (Changed Collection)
@@ -84,7 +87,8 @@
 {% else %}
     <div class="row row-cols-1 row-cols-sm-2 g-4">
         {% for month in months %}
-            <div class="col" data-collection-month-start="{{ month.name | date: '%F' }}">
+            {% assign lastCollectionIndex = month.items.size | minus: 1 %}
+            <div class="col" data-collection-first="{{ month.items[0].collectionDate | date: '%F'  }}" data-collection-last="{{ month.items[lastCollectionIndex].collectionDate | date: '%F' }}">
                 <h2 class="h3" id="{{ month.name | slugify }}">{{ month.name }}</h2>
 
                 {% for item in month.items %}
@@ -121,42 +125,38 @@
             </div>
         </div>
     </div>
-
-    <script>
-        let collectionMonths = document.querySelectorAll('[data-collection-month-start]');
-
-        collectionMonths.forEach(function(el) {
-            let collectionMonthStart = el.getAttribute('data-collection-month-start');
-            let dateNow = new Date().getTime();
-
-            if (collectionMonthStart) {
-                let monthStart = new Date(collectionMonthStart);
-                let monthEnd = new Date(monthStart);
-                monthEnd.setMonth(monthStart.getMonth() + 1);
-
-                // If the whole month has passed, set opacity on the main column
-                if (dateNow > monthEnd) {
-                    el.classList.add('opacity-75');
-                } 
-                else {
-                    // Check for any collection dates that may be in the past during the month
-                    Array.from(el.children).forEach(function(childEl) {
-                        let collectionBinDate = childEl.getAttribute('data-bin-collection-date');
-
-                        if (collectionBinDate) {
-                            let collectionDate = new Date(collectionBinDate);
-                            let collectionEndDate = new Date(collectionDate);
-                            // Add 12 hours to collection date for midday to be the cut off
-                            collectionEndDate.setHours(collectionDate.getHours() + 12);
-
-                            // Check for any past collections within the month
-                            if (dateNow >= collectionEndDate) {
-                                childEl.classList.add('opacity-75');
-                            }
-                        }
-                    });
-                }
-            }
-        });
-    </script>
 {% endif %}
+
+<script>
+    let collectionMonths = document.querySelectorAll('.col');
+
+    collectionMonths.forEach(function(el) {
+        let dateNow = new Date().getTime();
+        let collectionFirst = new Date(el.getAttribute('data-collection-first'));
+        let collectionLast = new Date(el.getAttribute('data-collection-last'));
+
+        // Check if last collection date in the month has passed
+        if (dateNow > collectionLast) {
+            el.classList.add('opacity-75');
+        }
+        else {
+            // Check for any collection dates that are in the past during the month
+            let collectionDates = el.querySelectorAll('[data-bin-collection-date]');
+
+            collectionDates.forEach(function(el) {
+                let collectionBinDate = el.getAttribute('data-bin-collection-date');
+                
+                if (collectionBinDate) {
+                    let collectionDate = new Date(collectionBinDate);
+                    let collectionEndDate = new Date(collectionDate);
+                    // Add 12 hours to collection date for midday to be the cut off
+                    collectionEndDate.setHours(collectionDate.getHours() + 12);
+
+                    if (dateNow >= collectionEndDate) {
+                        el.classList.add('opacity-75');
+                    }
+                }
+            });
+        }
+    });
+</script>
