Add extra validation for input

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -24,7 +24,7 @@
         <input class="form-control w-100" type="text" id="ical-url" value="{{ icalUrl }}" readonly>
 
         <div role="region" aria-live="polite" id="ical-url-copy-result" class="d-none mt-1 mb-0">
-            
+
         </div>
 
         <div class="d-grid d-md-flex gap-2 mt-2">
@@ -123,7 +123,7 @@
             </div>
 
             <div>
-                <i class="bi bi-square-fill text-danger"></i>
+                <i class="bi bi-square text-danger"></i>
                 <span class="ms-1">Changed Collection</span>
             </div>
         </div>
