--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,8 +1,8 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        {% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
+        {% assign crumbs = page.url | remove: '/index.html' | split: '/' %}
         <li class="breadcrumb-item">
-            <a href="/">Home</a>
+            <a href="{{ site.url }}">Home</a>
         </li>
         {% for crumb in crumbs offset: 1 %}
             {% if forloop.last %}
@@ -11,7 +11,7 @@
                 </li>
             {% else %}
                 <li class="breadcrumb-item">
-                    <a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
+                    <a href="{{ site.url }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
                 </li>
             {% endif %}
         {% endfor %}
