--- a/_includes/header-minimal.html
+++ b/_includes/header-minimal.html
@@ -1,12 +1,12 @@
 <header class="bg-black text-white py-2">
     <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
-            <a href="/">
+            <a href="{{ site.url }}">
                 {% include logo.html width="200" %}
             </a>
 
             {% if page.url != '/collections/' %}
-                <a href="/collections" class="d-none d-md-block btn btn-light">
+                <a href="{{ '/collections' | absolute_url }}" class="d-none d-md-block btn btn-light">
                     View all calendars
                 </a>
             {% endif %}
