--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo title=false %}
     <title>{% if isHome %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-    <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | absolute_url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | absolute_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -65,6 +65,6 @@
 
       {% include footer.html %}
 
-      <script src="{{ "/assets/js/bootstrap.bundle.min.js" | relative_url }}"></script>
+      <script src="{{ "/assets/js/bootstrap.bundle.min.js" | absolute_url }}"></script>
   </body>
 </html>
