Adjust link colour to be slighty darker

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,8 @@ $custom-colors: (
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
+$link-color: #0367FC;
+
 @import "bootstrap/scss/maps";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/root";
